--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.Fooder"
         tools:targetApi="31">
         <activity
+            android:name=".Restaurant_HomePage"
+            android:exported="false" />
+        <activity
+            android:name=".Restaurant_homepage"
+            android:exported="false"
+            android:label="@string/title_activity_restaurant_homepage"
+            android:theme="@style/Theme.Fooder.NoActionBar" />
+        <activity
             android:name=".HomePage"
             android:exported="false" />
         <activity
